[CHANGE] Fixed the issue where sometimes the popup isn't placed in the visible region when an annotation is selected.

--- a/src/constants/popup.scss
+++ b/src/constants/popup.scss
@@ -46,6 +46,13 @@ $popup-icon-width: 18px;
   }
 }
 
+%popup-landscape {
+  @media (orientation: landscape) {
+    max-height: calc(100% - #{$top-bar-height} - 5px);
+    overflow: auto;
+  }
+}
+
 %popup-mobile {
   @include mobile {
     position: fixed;
